LavaLust Version 2

# Changelog

## Fixed Cookie samesite error in PHP version < 7.3
set_cookie($name, $value, $expiration, array())

## Fixed Session Class / flashdata() problem wiht PHP 8. [2.0.4]

## Update model methods inside controller. [2.0.4]

If you are using version <= 2.0.3 you will need to update every calls on your model.
Before, you are creating model like class Example_model{} and load it using $this->call->model('example')

Now model method has a second optional parameter which is the object name you want to use aside
from the class name itself. So if you have something like class Example_model {}, you can now call it using
$this->call->model('example_model', 'example'). Then if you are going to use it, just use $this->example->some_method().
You can also use array to load methods by using key & value. Example $this->call->model(array('key' => 'value'))
which is key is the new object name you want to use and value is the actual class name.

Regular usage now is class My_model {}, $this->call->model('my_model')

To easily migrate from 2.0.3 to 2.0.4 change all instances of $this->call->model() to the
example with second parameter. So if you have class Example_model {} before and you call it this way
$this->call->model('example') now you shoul do something like this $this->call->model('example_model', 'example')

## Add Pagination Class [2.0.3]

## ->exec() was added again for some technical reasons [2.0.2]

## No need to add Database.php ->exec() method in insert, update and delete [2.0.1]
    - you can simple remove ->exec() now while creating sql statement using query builder
    
## Added option to use query string [2.0.0] 2021-03-30
    -inside config there is now option to allow query string on the links
        for some reason it is sometimes needed if there are optional
        parameters

## LavaLust Version 2 Starts with change log 1.0.2 2021-02-19

## Upload Class was added [1.0.2] 2021-02-23]
    -Added Upload Library